--- a/CBR.css
+++ b/CBR.css
@@ -1,7 +1,16 @@
-body {
-    background-color: aquamarine;
+* {
+    margin: 0;
+    padding: 0;
+    font-family: 'Poppins', sans-serif;
+    box-sizing: border-box;
 }
 
-.header {
-    background-color: blue;
+.container {
+    width: 100%;
+    min-height: 100vh;
+    background-image: linear-gradient(rgba(9,0,77,0.65,),rgba(9,0,77,0.65,)), 
+    url(images/background.png);
+    background-size: cover;
+    background-position: center;
+    padding: 10px 8%;
 }
