--- a/index.css
+++ b/index.css
@@ -55,3 +55,17 @@ padding-bottom: 30px;
     background: #222;
     color: #fff;
 }
+
+#next-btn{
+    background: #001e4d;
+    color:#fff;
+    font-weight: 500;
+    width: 150px;
+    border: 0;
+    padding: 10px;
+    margin: 20px auto 0;
+    border-radius:4px;
+    cursor: pointer;
+    display: none; /* the button is hidden */
+    
+}
