--- a/CBR.css
+++ b/CBR.css
@@ -7,12 +7,63 @@
 
 .container {
     width: 100%;
-    min-height: 100vh;
-    background-image: linear-gradient(rgba(9,0,77,0.65,),rgba(9,0,77,0.65,)), 
-    url(images/background.png);
+    min-height: 100vh; 
+    background-image:url(images/background.png);
     background-size: cover;
     background-position: center;
     padding: 10px 8%;
+}
+
+.button {
+    border-radius: 40px;
+    border: 0;
+    font-size: 1.8rem;
+    font-weight: 600;
+    margin: 1rem 0;
+    padding: 2rem 3rem;
+    text-transform: uppercase;
+    white-space: nowrap;
+    cursor: pointer;
+}
+.button--primary {
+    background: dodgerblue;
+    color: #231414;
+}
+.button--primary:hover{
+    background: rgb(5, 62, 120);
+}
+.button--secondary{
+    background: darkturquoise;
+    color: aliceblue;
+}
+.button--secondary:hover{
+    background: rgb(1, 99, 101);
+}
+.button--accent {
+    background: orangered;
+    color: white;
+}
+.button--accent:hover{
+    background: rgb(139, 39, 3);
+}
+.button--outline{
+    background: #fff;
+    color: black;
+    border: 2px solid black;
+}
+.button--outline:hover{
+    background: black;
+    color: #fff;
+}
+.button--block{
+    width: 100%;
+    display: inline-block;
+}
+/*Media quesry is when screen is getting larger then 1024px*/
+@media screen and (min-width:1024px) {
+    .button{
+        font-size: 1.5rem;
+    }
 }
 
 nav{
@@ -39,7 +90,7 @@ nav ul li{
     margin: 10px 20px;
 }
 nav ul li a{
-    color: #fff;
+    color: #dccccc;
     text-decoration: none;
 }
 
@@ -49,9 +100,9 @@ nav ul li a{
     padding: 10px 20px;
     border: 0;
     outline: 0;
-    border-radius: 5xp;
+    border-radius: 10xp;
     background: #f5168d;
-    color: #fff;
+    color: #3a1e1e;
     font-weight: 500;
     cursor: pointer;
 }
@@ -63,7 +114,7 @@ nav ul li a{
 
 .content{
     margin-top: 14%;
-    color: #fff;
+    color: #b51313;
     max-width: 620px;
 }
 .content h1{
@@ -75,7 +126,7 @@ nav ul li a{
 .content form{
     display: flex;
     align-items: center;
-    background: #ffff;
+    background: #231414;
     border-radius: 5px;
     padding: 10px;
     margin-top: 30px;
