--- a/CBR.css
+++ b/CBR.css
@@ -1,6 +1,8 @@
 * {
     margin: 0;
     padding: 0;
+    text-decoration: none;
+    list-style: none;
     font-family: 'Poppins', sans-serif;
     box-sizing: border-box;
 }
@@ -56,8 +58,10 @@
     color: #fff;
 }
 .button--block{
-    width: 100%;
+    width: 80%;
     display: inline-block;
+    position: relative;
+    left: 200px;
 }
 /*Media quesry is when screen is getting larger then 1024px*/
 @media screen and (min-width:1024px) {
@@ -121,7 +125,13 @@ nav ul li a{
     font-size: 75px;
     font-weight: 600;
     line-height: 80px;
-    margin-bottom: 25px;
+    margin-bottom: 15px;
+    position: relative;
+    bottom: 200px;
+}
+.content p{
+    position: relative;
+    bottom: 200px;
 }
 .content form{
     display: flex;
@@ -130,6 +140,8 @@ nav ul li a{
     border-radius: 5px;
     padding: 10px;
     margin-top: 30px;
+    position: relative;
+    bottom: 200px;
 }
 .content form input{
     border: 0;
