--- a/CBR.css
+++ b/CBR.css
@@ -4,7 +4,47 @@
     text-decoration: none;
     list-style: none;
     font-family: 'Poppins', sans-serif;
+    font-family: 'Work Sans', sans-serif;
     box-sizing: border-box;
+}
+
+body{
+    height: 100vh;
+    width: 100%;
+    background: #1a59a2;
+}
+section{
+    padding: 80px 13% 70px;
+}
+
+.footer {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, auto));
+    gap: 3.5rem;
+    background: #2060a3;
+    left: 0;
+    right: 0;
+    bottom: 0;
+}
+
+.footer-content h4{
+    color: #fff;
+    margin-bottom: 1.5rem;
+    font-size: 20px;
+}
+.footer-content li{
+    margin-bottom: 16px;
+}
+.footer-content li a{
+    display: block;
+    color: #d6d6d6;
+    font-size: 15px;
+    font-weight: 400;
+    transition: all .40s ease;
+}
+.footer-content li a:hover{
+    transform: translateY(-3px) translateX(-5px);
+    color: #fff;
 }
 
 .container {
