--- a/CBR.css
+++ b/CBR.css
@@ -46,6 +46,44 @@ section{
     transform: translateY(-3px) translateX(-5px);
     color: #fff;
 }
+.footer-content p{
+    color: #d6d6d6d6;
+    font-size: 16px;
+    line-height: 30px;
+    margin: 20px 0;
+}
+.icons a{
+    display: inline-block;
+    font-size: 22px;
+    color: #d6d6d6;
+    margin-right: 17px;
+    transition: all .40s ease;
+}
+.icons a:hover{
+    color: #ffddef;
+    transform: translateY(-5px);
+}
+
+@media (max-width:1690px){
+    section{
+        padding: 50px 5% 40px;
+    }
+}
+@media (max-width:1120px){
+    .footer{
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(300px, auto));
+        gap: 2rem;
+    }
+}
+@media (max-width:700px){
+    .footer{
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(150px, auto));
+        gap: 2.5rem;
+    }
+}
+
 
 .container {
     width: 100%;
