--- a/index.css
+++ b/index.css
@@ -69,3 +69,12 @@ padding-bottom: 30px;
     display: none; /* the button is hidden 
     
 } */
+
+* {
+    margin: 0;
+    padding: 0;
+    font-family: 'Poppins', sans-serif;
+    box-sizing: border-box;
+}
+
+
