--- a/index.css
+++ b/index.css
@@ -1,4 +1,4 @@
-/* * {
+* {
     margin: 0;
     padding: 0;
     font-family: 'Poppins', sans-serif;
@@ -10,7 +10,7 @@ body{
 
 }
 
-.app{
+.titel{
     background: #fff;
     width: 90%;
     max-width: 600px;
@@ -19,7 +19,7 @@ body{
     padding: 30px;
 }
 
-.app h1{
+.titel h1{
 font-size: 25px;
 color: #001e4d;
 font-weight: 600;
@@ -27,36 +27,36 @@ border-bottom: 1px solid #333;
 padding-bottom: 30px;
 }
 
-.quiz{
+button{
     padding: 20px 0;
 }
 
-.quiz h2{
+button h2{
     font-size: 18px;
     color: #001e4d;
     font-weight: 600;
 }
 
-.btn{
+button{
     background: #fff;
     color: #222;
     font-weight: 500;
-    width: 100%;
+    width: 75%;
     border: 1px solid #222;
-    padding: 10px;
-    margin: 10px 0;
+    padding: 20px;
+    margin: 10px 0 10px;
     text-align: left;
     border-radius:4px;
     cursor: pointer;
     transition: all 0.3s;
 }
 
-.btn:hover{
+button:hover{
     background: #222;
     color: #fff;
 }
 
-#next-btn{
+/* #vragenbox{
     background: #001e4d;
     color:#fff;
     font-weight: 500;
@@ -66,8 +66,7 @@ padding-bottom: 30px;
     margin: 20px auto 0;
     border-radius:4px;
     cursor: pointer;
-    display: none; /* the button is hidden 
-    
+    display: none; 
 } */
 
 * {
