--- a/index.css
+++ b/index.css
@@ -41,11 +41,11 @@ button{
     background: #fff;
     color: #222;
     font-weight: 500;
-    width: 75%;
+    width: 42%;
     border: 1px solid #222;
     padding: 20px;
-    margin: 10px 0 10px;
-    text-align: left;
+    margin: 10px 400px 10px;
+    text-align: center;
     border-radius:4px;
     cursor: pointer;
     transition: all 0.3s;
@@ -56,24 +56,12 @@ button:hover{
     color: #fff;
 }
 
-/* #vragenbox{
-    background: #001e4d;
-    color:#fff;
-    font-weight: 500;
-    width: 150px;
-    border: 0;
-    padding: 10px;
-    margin: 20px auto 0;
-    border-radius:4px;
-    cursor: pointer;
-    display: none; 
-} */
-
 * {
     margin: 0;
     padding: 0;
     font-family: 'Poppins', sans-serif;
     box-sizing: border-box;
 }
+
 
 
